Still trying to fix weird headshot spacing

--- a/style.css
+++ b/style.css
@@ -31,11 +31,13 @@ ul.sidenav li a:hover:not(.active) {
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
  float: left;
- margin-left: 25%;
  width: 50%;
  padding: 5px;
 }
-
+.row {
+margin-left: 25%;
+padding: 10px 16px;
+}
 /* Clear floats after image containers */
 .row::after {
  content: "";
